removed dependency on java 7, added settings for vm options