@@ -1,7 +1,7 @@
 package com.mle.idea.sbtexecutor
 
 import com.intellij.openapi.actionSystem.{LangDataKeys, AnActionEvent, AnAction}
-import java.nio.file.{Files, Path, Paths}
+import java.io.File
 import com.intellij.openapi.application.PathManager
 import scala.collection.JavaConversions._
 import com.intellij.openapi.util.io.{FileUtil, StreamUtil}
@@ -10,29 +10,31 @@ import com.intellij.openapi.util.io.{FileUtil, StreamUtil}
  *
  * @author mle
  */
-class SbtCommandAction(sbtCommand: String)
+class SbtCommandAction(sbtCommand: String, vmOptions: String)
   extends AnAction(sbtCommand, s"Executes $sbtCommand", null)
   with EnabledWhenNotRunning {
 
   def actionPerformed(e: AnActionEvent) {
     val project = e.getProject
     val projectPathString = project.getBasePath
-    val workingDir = Paths get projectPathString
-    val commandParams = buildCommand(e, sbtCommand)
+    //    val workingDir = Paths get projectPathString
+    val workingDir = new File(projectPathString)
+    val commandParams = buildCommand(e, sbtCommand, vmOptions)
     val consoleComponent = project.getComponent(classOf[SbtExecuteConsoleComponent])
     consoleComponent.show()
     // scala
     //    consoleComponent runProcess Process(commandParams, workingDir.toFile)
     // java
     val builder = new ProcessBuilder(commandParams)
-    builder directory workingDir.toFile
+    builder directory workingDir
     builder redirectErrorStream true
     consoleComponent.commander runJavaProcess builder
   }
 
-  private def buildCommand(e: AnActionEvent, sbtCommand: String) = {
+  private def buildCommand(e: AnActionEvent, sbtCommand: String, vmOptions: String) = {
     val module = e.getData(LangDataKeys.MODULE)
     val java = "java"
+    val vmOptionsSeq = vmOptions split " "
     val sbtJar = ensureSbtJarExists
     // set SBT project if any is selected (helps for multi-module idea builds)
     val setProjectCommand =
@@ -41,20 +43,19 @@ class SbtCommandAction(sbtCommand: String)
       } else {
         Seq.empty[String]
       }
-    Seq(
-      java,
-      "-Xmx512M",
-      "-XX:MaxPermSize=256M",
-      "-jar",
-      sbtJar.toAbsolutePath.toString
-    ) ++ setProjectCommand :+ sbtCommand :+ "exit"
+    Seq(java) ++
+      vmOptionsSeq ++
+      Seq("-jar", sbtJar.getAbsolutePath) ++
+      setProjectCommand ++
+      Seq(sbtCommand, "exit")
   }
 
   // adapted from idea-sbt-plugin
-  private def ensureSbtJarExists: Path = {
+  private def ensureSbtJarExists: File = {
     val jarName = "sbt-launch.jar"
-    val maybeSbtJar = Paths.get(PathManager.getSystemPath, "sbtexe", jarName)
-    if (!(Files exists maybeSbtJar)) {
+    //    val maybeSbtJar = Paths.get(PathManager.getSystemPath, "sbtexe", jarName)
+    val maybeSbtJar = new File(new File(PathManager.getSystemPath, "sbtexe"), jarName)
+    if (!maybeSbtJar.exists()) {
       val is = classOf[SbtCommandAction].getClassLoader.getResourceAsStream(jarName)
       val bytes =
         try {
@@ -62,7 +63,7 @@ class SbtCommandAction(sbtCommand: String)
         } finally {
           StreamUtil closeStream is
         }
-      FileUtil.writeToFile(maybeSbtJar.toFile, bytes)
+      FileUtil.writeToFile(maybeSbtJar, bytes)
     }
     maybeSbtJar
   }
